@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2832015 by mkalkbrenner: Removed translations from functional tests.
 - #2828184 by ekes: Fixed bug in Stemmer config form validation.
 - #2828848 by mkalkbrenner, drunken monkey, borisson_: Prepared IntegrationTest
   to be executed with different backends.
